# badlogvis

./: .gitignore  .travis.yml  Cargo.toml  README.md  testfile.badbag  testfile.csv
.ci/: cross-build.sh  install.sh  package.sh  win-build.sh
.github/workflows/: release.yml
src/: attached_file.rs  attatched_file.rs  attribute.rs  folder.rs  graph.rs  input.rs  main.rs  util.rs  xaxis.rs
src/web_res/: badlogvis.css
